# MCP-LOCAL

./: .coverage  .coveragerc  CHANGELOG.md  LICENCE  MCP_COMPLIANCE_REPORT.md  README.md  docker-compose.yaml  install_devtools.ps1  metadata_implementation_plan.md  metadata_implementation_summary.md  project.rules.yaml  pyproject.toml  setup.py  start.sh  start_local.sh  stop.sh
.github/workflows/: test-coverage.yaml  update-registry.yaml
config/: mcp_capabilities.yaml  mcp_permissions.json  mcp_register.yaml
config/policies/: agent.policy.yaml  graph.policy.yaml  memory.policy.yaml  tool.policy.yaml
config/rules/: agents.rules.yaml  capabilities.rules.yaml  logging.rules.yaml  naming.rules.yaml  permissions.rules.yaml  structure.rules.yaml
docs/: architecture.md  test_coverage_guide.md
mcp_local.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp_units/: __init__.py
mcp_units/mcp_agent_interaction_engine/: Dockerfile  __init__.py  api_gateway.py  dialog_flow.py  graph.py  graph_executor.py  logger.py  requirements.txt  rules_api.py  runtime_rules.py  status_api.py
mcp_units/mcp_host_llm_infer/: Dockerfile  __init__.py  llm_service.py
mcp_units/mcp_host_memory_store/: Dockerfile  __init__.py  memory_handler.py
mcp_units/mcp_tool_executor/: Dockerfile  __init__.py  tool_runner.py
runtime_state/: state_context.json  state_memory.json  state_policy.json  state_status.json
scripts/: add_metadata.py  add_metadata_all.py  mcp_cli.py  run_coverage.py  start_all.sh  stop_all.sh  test_registry.py  update_registry.py  validate_rules.py
templates/: json_metadata.template  markdown_metadata.template  script_metadata.template  yaml_metadata.template
tests/: test_capabilities.py  test_infer_api.py  test_integration_mcp.py  test_interaction.py  test_llm_service.py  test_memory.py  test_registry.py  test_rules.py  test_rules_api.py  test_runtime_rules.py  test_runtime_rules_docker.py  test_status_ping.py  test_tool_runner.py
ui/: .gitignore  README.md  dashboard.py  package-lock.json  package.json  svelte.config.js  tauri.conf.json  vite.config.js
ui/components/: memory_panel.py
ui/src/: app.css  app.html
ui/src-tauri/: Cargo.toml
ui/src-tauri/src/: main.rs
ui/src/lib/: api.ts
ui/src/lib/components/: Layout.svelte  Navigation.svelte
ui/src/routes/: +layout.svelte  +page.svelte
ui/static/: favicon.txt
(+3 files in other folders)
